doing practice problems

--- a/main.html
+++ b/main.html
@@ -1,6 +1,11 @@
 <!-- -->
 <!-- the POST request goes to google-->
-<form action="http://www.google.com/search">
-  <input name="q">
+<form>
+  <select name="q">
+    <option>One</option>
+    <option>Two</option>    
+    <option>Three</option>
+  </select>
+  <br>
   <input type="submit">  
 </form>
